// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot 1`] = `
.c0 {
  width: 100%;
  max-width: 120rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c17 {
  color: #000000;
  line-height: 1.2;
  font-size: calc(2.4rem * 0.8);
  text-transform: uppercase;
}

.c21 {
  color: #000000;
  line-height: 1.2;
  font-size: calc(2.4rem * 0.8);
  text-transform: none;
}

.c10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c28 {
  display: grid;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-columns: 1fr 1fr;
  gap: 2.4rem;
}

.c28 .c16 {
  color: #333333;
  margin-top: 0;
  margin-bottom: 1.6rem;
}

.c28 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c28 a:hover {
  color: #dc143c;
}

.c29 {
  position: relative;
  padding-bottom: 56.25%;
}

.c30 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
}

.c30:hover {
  opacity: 0.8;
}

.c31 {
  opacity: 0.6;
  margin-bottom: 0.8rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1.6rem;
}

.c31 span {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c31 span > svg {
  margin-right: 0.8rem;
}

.c32 {
  max-width: 100%;
}

.c26 {
  width: 100%;
  margin: 0 auto;
}

.c27 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c36 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c36 p {
  margin: 4.0rem 0;
}

.c36 a,
.c36 a:visited,
.c36 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c36 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c36 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c36 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c36 pre code {
  color: inherit;
  background: inherit;
}

.c36 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c36 img {
  max-width: 100%;
}

.c36 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c36 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c36 ul,
.c36 ol {
  margin: 2.4rem 4.0rem;
}

.c36 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c36 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c36 table td,
.c36 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c36 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c35 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c35 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c37 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c19 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c15 .c16 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c15 .c18 > img {
  border-radius: 50%;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c8 {
  z-index: 9;
  -webkit-transition: background 0.2s ease-in-out;
  transition: background 0.2s ease-in-out;
}

.c11 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c12 {
  margin: 4.8rem auto;
  width: 100%;
}

.c9 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c13 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c13:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c2 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c5:checked + .c6 {
  background: #dc143c;
  border: 1px solid #dc143c;
}

.c5:focus + .c6 {
  border: 1px solid #dc143c;
}

.c5:checked.c4:focus + .c6 {
  border: 1px solid #000000;
}

.c5:checked + .c6:before {
  -webkit-transform: translateX(2rem);
  -ms-transform: translateX(2rem);
  transform: translateX(2rem);
  background: #000000;
}

.c7 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #AAAAAA;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  border-radius: 2rem;
  border: 1px solid #AAAAAA;
}

.c7:before {
  content: '';
  position: absolute;
  height: 1.9rem;
  width: 1.9rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #FFFFFF;
  border-radius: 50%;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #FFFFFF;
  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
}

.c14 {
  margin-top: 6.4rem;
}

.c22 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c23 {
  padding: 0.5rem 1.6rem;
}

.c24 {
  margin-bottom: 6.4rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c25 {
  display: grid;
  grid-template-columns: 70% 30%;
}

.c33 {
  padding: 0 3.2rem;
  margin: 3.2rem 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c34 {
  background: #000000;
  color: #FFFFFF;
  border: none;
  padding: 1.6rem 3.2rem;
  cursor: pointer;
}

.c34:disabled {
  background: #AAAAAA;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c17 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c21 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:600px) {
  .c28 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c31 {
    font-size: calc(0.8rem * 1.6);
  }
}

@media (min-width:768px) {
  .c36 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c36 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c19 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c15 .c16 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c11 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c9 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c25 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        Toggle light and dark modes
        <input
          class="c4 c5"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c6 c7"
        />
      </label>
    </div>
    <div
      class="c8"
    >
      <a
        aria-label="Open or close menu"
        class="c9"
        href="#"
        title="Open menu"
      >
        <svg
          aria-hidden="true"
          aria-label="Open menu"
          class="c10"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </a>
      <main
        aria-hidden="true"
        class="c11"
      >
        <nav
          class="c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            home
          </a>
          <a
            class="c13"
            href="/contact"
            target="_self"
          >
            contact
          </a>
        </nav>
      </main>
    </div>
    <div
      class="c14"
    >
      <div
        class="c0"
      >
        <header
          class="c15"
        >
          <h1
            class="c16 c17"
          >
            <a
              class="c18 c19"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c20"
          >
            <h2
              class="c16 c21"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
      <div
        class="c22"
      >
        <form
          action="/search/"
          method="GET"
        >
          <input
            class="c23"
            name="q"
            placeholder="O que você procura?"
            type="search"
            value=""
          />
        </form>
      </div>
    </div>
    <div
      class="c24"
    >
      <div
        class="c25"
      >
        <div
          class="c0"
        >
          <div
            class="c26"
          >
            <div
              class="c27"
            >
              <div
                class="c28"
              >
                <div
                  class="c29"
                >
                  <a
                    href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                  >
                    <img
                      alt=""
                      class="c30"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129235/Xavi_Hernandez_Barcelona_c60f5b3e16.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c31"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c10"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c10"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      19 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c16 c21"
                  >
                    <a
                      href="/post/al-sadd-anuncia-acordo-para-liberar-xavi-mas-barcelona-nega"
                    >
                      Al Sadd anuncia acordo para liberar Xavi, mas Barcelona nega
                    </a>
                  </h2>
                  <p
                    class="c32"
                  >
                    A novela continua: Barcelona vê em anúncio de acerto do Al Sadd como uma forma de pressão para o pagamento da multa.
                  </p>
                </div>
              </div>
              <div
                class="c28"
              >
                <div
                  class="c29"
                >
                  <a
                    href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                  >
                    <img
                      alt=""
                      class="c30"
                      src="https://res.cloudinary.com/rabbitz/image/upload/v1636129861/zielinski_napoli_9359de0d9d.jpg"
                    />
                  </a>
                </div>
                <div
                  class=""
                >
                  <div
                    class="c31"
                  >
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c10"
                        fill="currentColor"
                        focusable="false"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM7.07 18.28c.43-.9 3.05-1.78 4.93-1.78s4.51.88 4.93 1.78C15.57 19.36 13.86 20 12 20s-3.57-.64-4.93-1.72zm11.29-1.45c-1.43-1.74-4.9-2.33-6.36-2.33s-4.93.59-6.36 2.33A7.95 7.95 0 014 12c0-4.41 3.59-8 8-8s8 3.59 8 8c0 1.82-.62 3.49-1.64 4.83zM12 6c-1.94 0-3.5 1.56-3.5 3.5S10.06 13 12 13s3.5-1.56 3.5-3.5S13.94 6 12 6zm0 5c-.83 0-1.5-.67-1.5-1.5S11.17 8 12 8s1.5.67 1.5 1.5S12.83 11 12 11z"
                        />
                      </svg>
                      <a
                        href="/author/pedro-coelho"
                      >
                        Pedro Coelho
                      </a>
                    </span>
                    <span>
                      <svg
                        aria-hidden="true"
                        class="c10"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        viewBox="0 0 24 24"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 18H4V10h16v11zm0-13H4V5h16v3z"
                        />
                      </svg>
                      21 de abr. de 2020
                    </span>
                  </div>
                  <h2
                    class="c16 c21"
                  >
                    <a
                      href="/post/com-dois-penaltis-napoli-vira-contra-o-legia-e-se-recupera-em-seu-grupo-da-liga-europa"
                    >
                      Com dois pênaltis, Napoli vira contra o Legia e se recupera em seu grupo da Liga Europa
                    </a>
                  </h2>
                  <p
                    class="c32"
                  >
                    Após levar apenas um ponto nas duas primeiras rodadas, o Napoli chegou a sete se colocou em situação mais confortável para a reta final.
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c33"
          >
            <button
              class="c34"
            >
              Carregar mais
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c35"
      >
        <div
          class="c36"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c37"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c10"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`

exports[`<PostsTemplate /> should match snapshot without posts 1`] = `
.c0 {
  width: 100%;
  max-width: 120rem;
  margin-left: auto;
  margin-right: auto;
  padding-left: calc(3.2rem / 2);
  padding-right: calc(3.2rem / 2);
}

.c17 {
  color: #000000;
  line-height: 1.2;
  font-size: calc(2.4rem * 0.8);
  text-transform: uppercase;
}

.c21 {
  color: #000000;
  line-height: 1.2;
  font-size: calc(2.4rem * 0.8);
  text-transform: none;
}

.c10 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c26 {
  width: 100%;
  margin: 0 auto;
}

.c27 {
  padding: 3.2rem;
  text-align: center;
  font-size: 2.4rem;
}

.c28 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr;
  gap: 6.4rem;
}

.c30 {
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c30 p {
  margin: 4.0rem 0;
}

.c30 a,
.c30 a:visited,
.c30 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c30 a:hover {
  -webkit-filter: brightness(0.8);
  filter: brightness(0.8);
}

.c30 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c30 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  width: 100%;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c30 pre code {
  color: inherit;
  background: inherit;
}

.c30 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c30 img {
  max-width: 100%;
}

.c30 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c30 .image figcaption {
  font-size: 1.6rem;
  padding: 0.8rem;
  text-align: center;
  line-height: 1.3;
}

.c30 ul,
.c30 ol {
  margin: 2.4rem 4.0rem;
}

.c30 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c30 table {
  width: 100%;
  border-collapse: collapse;
  margin: 2.4rem 0;
}

.c30 table td,
.c30 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c30 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c29 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c29 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c31 {
  cursor: pointer;
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c19 > img {
  height: 15rem;
  width: 15rem;
  border-radius: 50%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
  gap: 3rem;
}

.c15 .c16 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c15 .c18 > img {
  border-radius: 50%;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 48rem;
}

.c8 {
  z-index: 9;
  -webkit-transition: background 0.2s ease-in-out;
  transition: background 0.2s ease-in-out;
}

.c11 {
  background: #000000;
  padding: 3.2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  width: 100%;
  max-width: 26rem;
  height: 100vh;
  top: 0;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: -24rem;
  overflow-y: hidden;
}

.c12 {
  margin: 4.8rem auto;
  width: 100%;
}

.c9 {
  position: fixed;
  top: 2.4rem;
  background: #000000;
  z-index: 2;
  width: 3rem;
  height: 3rem;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  left: 0.5rem;
  top: 2rem;
  color: #FFFFFF;
}

.c13 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c13:hover {
  border-color: #dc143c;
  color: #dc143c;
}

.c2 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c3 {
  position: relative;
  display: inline-block;
  width: 5rem;
  height: 2.5rem;
  line-height: 0;
  font-size: 0;
  overflow: hidden;
  color: rgba(0,0,0,0);
}

.c5 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  width: 0;
  height: 0;
}

.c5:checked + .c6 {
  background: #dc143c;
  border: 1px solid #dc143c;
}

.c5:focus + .c6 {
  border: 1px solid #dc143c;
}

.c5:checked.c4:focus + .c6 {
  border: 1px solid #000000;
}

.c5:checked + .c6:before {
  -webkit-transform: translateX(2rem);
  -ms-transform: translateX(2rem);
  transform: translateX(2rem);
  background: #000000;
}

.c7 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: #AAAAAA;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  border-radius: 2rem;
  border: 1px solid #AAAAAA;
}

.c7:before {
  content: '';
  position: absolute;
  height: 1.9rem;
  width: 1.9rem;
  left: 0.4rem;
  bottom: 0.2rem;
  background: #FFFFFF;
  border-radius: 50%;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  height: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #FFFFFF;
  -webkit-box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
  box-shadow: 0px 0px 15px 2px rgba(0,0,0,0.1);
}

.c14 {
  margin-top: 6.4rem;
}

.c22 {
  margin: 0 auto;
  margin-bottom: 4.0rem;
  padding: 0 3.2rem;
  max-width: 120rem;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c23 {
  padding: 0.5rem 1.6rem;
}

.c24 {
  margin-bottom: 6.4rem;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c25 {
  display: grid;
  grid-template-columns: 70% 30%;
}

@media (min-width:768px) {
  .c0 {
    padding-left: calc(3.2rem * 0.7);
    padding-right: calc(3.2rem * 0.7);
  }
}

@media (max-width:768px) {
  .c17 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (max-width:768px) {
  .c21 {
    font-size: calc(1.6rem * 1.2);
  }
}

@media (min-width:768px) {
  .c30 .image-style-side {
    float: right;
    max-width: 50%;
    margin: 2.4rem;
  }
}

@media (max-width:768px) {
  .c30 {
    font-size: 2rem;
  }
}

@media (max-width:450px) {
  .c19 > img {
    height: 10rem;
    width: 10rem;
  }
}

@media (max-width:450px) {
  .c15 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    gap: 1rem;
  }

  .c15 .c16 {
    text-align: center;
  }
}

@media (max-width:768px) {
  .c11 {
    left: -26rem;
  }
}

@media (max-width:768px) {
  .c9 {
    left: 0rem;
  }
}

@media (max-width:1170px) {
  .c25 {
    grid-template-columns: 1fr;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <label
        class="c3"
      >
        Toggle light and dark modes
        <input
          class="c4 c5"
          type="checkbox"
          value="Dark mode active"
        />
        <span
          class="c6 c7"
        />
      </label>
    </div>
    <div
      class="c8"
    >
      <a
        aria-label="Open or close menu"
        class="c9"
        href="#"
        title="Open menu"
      >
        <svg
          aria-hidden="true"
          aria-label="Open menu"
          class="c10"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </a>
      <main
        aria-hidden="true"
        class="c11"
      >
        <nav
          class="c12"
        >
          <a
            class="c13"
            href="/"
            target="_self"
          >
            home
          </a>
          <a
            class="c13"
            href="/contact"
            target="_self"
          >
            contact
          </a>
        </nav>
      </main>
    </div>
    <div
      class="c14"
    >
      <div
        class="c0"
      >
        <header
          class="c15"
        >
          <h1
            class="c16 c17"
          >
            <a
              class="c18 c19"
              href="/"
              target="_self"
            >
              <img
                alt="Pedro Coelho Blog"
                src="/assets/images/me.jpg"
              />
            </a>
          </h1>
          <div
            class="c20"
          >
            <h2
              class="c16 c21"
            >
              Pedro Coelho
            </h2>
            <p
              class=""
            >
              Uma descrição para o seu blog.
            </p>
          </div>
        </header>
      </div>
      <div
        class="c22"
      >
        <form
          action="/search/"
          method="GET"
        >
          <input
            class="c23"
            name="q"
            placeholder="O que você procura?"
            type="search"
            value=""
          />
        </form>
      </div>
    </div>
    <div
      class="c24"
    >
      <div
        class="c25"
      >
        <div
          class="c0"
        >
          <div
            class="c26"
          >
            <p
              class="c27"
            >
              Nenhum post encontrado aqui
            </p>
            <div
              class="c28"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0"
    >
      <footer
        class="c29"
      >
        <div
          class="c30"
        >
          <p>
            Footer do Blog
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c31"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c10"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`
